testsuite/tests/typing-modules-bugs/pr7414_bad.compilers.reference
File "pr7414_bad.ml", line 54, characters 16-30:
54 | module Ignore = Force (Choose)
                     ^^^^^^^^^^^^^^
Error: Modules do not match:
       functor () -> sig module Choice : T val r : '_weak1 list ref ref end
     is not included in functor () -> S
     Modules do not match:
       sig module Choice : T val r : '_weak1 list ref ref end
     is not included in
       S
     Values do not match:
       val r : '_weak1 list ref ref
     is not included in
       val r : Choice.t list ref ref
     The type "'_weak1 list ref ref" is not compatible with the type
       "Choice.t list ref ref"
     The type constructor "Choice.t" would escape its scope
     File "pr7414_bad.ml", line 41, characters 2-31: Expected declaration
     File "pr7414_bad.ml", line 35, characters 6-7: Actual declaration
